# kernel

./: .bochsrc  Cargo.toml  LICENSE  Makefile  OVMF_VARS-1024x768.fd  README.md  uefi-kernel.code-workspace  x86_64-kernel.json  x86_64-none-efi.json
binaries/init/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: device.rs  lib.rs  panic.rs  platform.rs
libuser/: Cargo.toml
libuser/src/: lib.rs
platform-x86_64/: Cargo.toml
platform-x86_64/src/: boot_info.rs  error.rs  event_buffer.rs  file.rs  interrupts.rs  keyboard.rs  lib.rs  memory.rs
platform-x86_64/src/device/: mod.rs  pc_keyboard.rs  uefi_filesystem.rs
platform-x86_64/src/device/pci/: discovery.rs  mod.rs
platform-x86_64/src/device/pci/graphics/: cirus5446.rs  mod.rs
platform-x86_64/src/logging/: log_impl.rs  macros.rs  mod.rs  vga.rs  writer.rs
platform-x86_64/src/memory/: allocator.rs  global_alloc.rs  mod.rs
ringbuffer/: Cargo.toml
ringbuffer/src/: lib.rs
src/: main.rs
src/arch/: mod.rs
src/arch/x86_64/: mod.rs
src/arch/x86_64/boot_info/: mod.rs
src/arch/x86_64/interrupts/: mod.rs
src/arch/x86_64/memory/: mod.rs
src/arch/x86_64/paging/: frame_allocator.rs  mod.rs
src/arch/x86_64/pci/: mod.rs
src/arch/x86_64/pic/: mod.rs
src/arch/x86_64/serial/: mod.rs
src/arch/x86_64/vga/: mod.rs
src/device/: mod.rs
src/device/network/: mod.rs
src/device/network/rtl8139/: mod.rs
src/memory/: mod.rs
src/runtime/: mod.rs  panic.rs
src/runtime/allocator/: bump_allocator.rs  mod.rs
