[package]
name = "kernel"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]

[dependencies]
spin = "*"
volatile = "*"
array-init = "*"
x86 = "*"
x86_64 = "*"
os_bootinfo = "*"
bootloader = { path = "../bootloader" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-kernel.json"
output = "target/bootimage.bin"
minimum-image-size=1
