[package]
name = "uefi-kernel"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

[dependencies]
uefi = "0.4.1"
log = { version = "0.4", default-features = false }
kernel = { path = "kernel" }
platform-x86_64 = { path = "platform-x86_64" }
ringbuffer = { path = "./ringbuffer" }

[patch.crates-io]
uefi = { path = "../extern/uefi-rs" }
