[package]
name = "platform-x86_64"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

[dependencies]
kernel = { path = "../kernel" }
ringbuffer = { path = "../ringbuffer" }
x86_64 = "0.8.2"
log = "0.4.5"
x2apic = { path = "../../x2apic-rs" }
spin = "0.4.9"
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.6.4"
